[package]
name = "cor_iter"
version = "0.1.0"
description="Correlate of two iterators"
categories=["rust-patterns", "no-std"]
keywords=["iterator", "variable", "correlate", "asymetric", "zip"]
readme="README.md"
license = "BSD-2-Clause"
authors = ["Nattapong Sirilappanich <s.nattapong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits="0.2"